# deployment-manager

./: README.md  package.json  syn-deploy-server.service  utils.sh
js/: docker-compose.yml
js/src/: index.ts
rust/: .env.example  Cargo.toml  README.md
rust/src/: admin.rs  config.rs  deploy.rs  main.rs  types.rs  webhook.rs
src/: index.ts
