[package]
name = "deploy-manager-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { version = "0.12.18", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
